h2 in-memory, embedded tomcat and other changes